kubernetes/demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo
  name: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - image: cloudnatived/demo:hello
        imagePullPolicy: IfNotPresent
        name: demo
        ports:
        - containerPort: 8888
          protocol: TCP
