kubernetes/demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
    - host: demo.example.com 
      http:
        paths:
        - path: / 
          backend:
            serviceName: demo-service
            servicePort: 9999
